# iongraph

./: .gitignore  DEVLOG.md  README.md  build-www.mjs  build.mjs  index.html  layout.html  package-lock.json  package.json  serve.mjs  tsconfig.json
.github/workflows/: main.yaml
python/: .gitignore  README.md  pyproject.toml
python/examples/: method_flowchart.json  nested_groups.json  simple_system.json
python/src/iongraph/: __init__.py  __main__.py  layout.py  models.py  svg.py
python/tests/: __init__.py  test_integration.py  test_layout.py  test_models.py  test_svg.py
src/: Graph.ts  GraphViewer.ts  GraphViewer.tsx  classes.ts  dom.ts  index-react.ts  index.ts  index.tsx  index_react.ts  iongraph.ts  lib.d.ts  react-components.tsx  style.css  test.tsx  tweak.ts  utils.ts
www/: index.html  main.ts  main.tsx  standalone.css  standalone.html
